--- a/02-Analysis.ipynb
+++ b/02-Analysis.ipynb
@@ -1068,6 +1068,15 @@
    "cell_type": "raw",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "***Please fill out our [modules feedback survey](https://goo.gl/forms/QCgq3B5uA5npe5ja2)!***"
+   ]
   }
  ],
  "metadata": {
