--- a/01-GWS-Notebook.ipynb
+++ b/01-GWS-Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the code cell below with the ▶| button above to set up this notebook:"
+    "Run the code cell below with the ▶| button above to set up this notebook, or type `SHIFT-ENTER`:"
    ]
   },
   {
